--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@google-cloud/vertexai": "^1.9.2",
+    "axios": "^1.12.0",
     "bee-agent-framework": "^0.0.61",
     "beeai-framework": "^0.1.6",
     "dotenv": "^16.4.5",
